# erspin

./: .gitignore  CITATION.cff  CLAUDE.md  Cargo.toml  README.md
benches/: search_bench.rs
src/: epn.rs  error.rs  evalue.rs  fasta.rs  lib.rs  main.rs  output.rs  pattern.rs  profile.rs  region.rs  scoring.rs  search.rs  simd.rs  types.rs
tests/data/: test.trna.fasta  test.txt  trna.typeI.epn
